Adds begin of ecs package and stress-test app

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
       "path": "apps/stress-test"
     },
     {
+      "path": "packages/ecs"
+    },
+    {
       "path": "packages/math"
     }
   ]
